
* Added a Prune node, for removing whole branches from a Scene (issue #70).

* The Menu class now supports the description field of menu items, displaying descriptions as tooltips.

* The Menu class now supports the passing of the menu to callables registered as subMenus.

0.55.0
======

* Fixed graphical glitches caused by icons overlapping the edge of the editors on the Gnome desktop.

* SceneProcedural now renders general VisibleRenderables too.

* Fixed SceneReader to read animation at the correct speed (issue #68).

* File->Quit and the window close icon now prompt the user to confirm before closing if there are unsaved changes (issue #19).

* Added support for shader parameters of type "shader" in the RenderManShader node - these are mapped to plugs which accept connections to other RenderManShaders, allowing the creation of networks of coshaders.

0.54.0
======

* Added base classes Executable and Despatcher and two derived Node classes: ExecutableNode and ExecutableOpHolder.

* Added an enabled/disabled plug to all SceneNodes. Nodes with no inputs output an empty scene when disabled, and SceneProcessors output the first input unchanged. The enabled/disabled state can be toggled using the node right click menu or the "d" hotkey in the Graph Editor.

* Added SceneNode::hash*() methods to match the GafferScene::compute*() methods. This was necessary for the enabled plug to be implemented, and also makes the implementation of derived classes more readable. Matching pairs of hash*() and compute*() methods should be reused as a pattern throughout Gaffer where appropriate in the future.

* Renamed SceneElementProcessor::process*() methods to SceneElementProcessor::computeProcessed*() and SceneElementProcessor::hash*() methods to SceneElementProcessor::hashProcessed*(). This was necessary to resolve conflicts with the name hash*() methods at the SceneNode level.
