@@ -38,6 +38,8 @@
 import re
 import os
 
+import IECore
+
 import Gaffer
 import GafferUI
 
@@ -47,6 +49,7 @@ def appendDefinitions( menuDefinition, prefix="" ) :
 
 	menuDefinition.append( prefix + "/New", { "command" : new, "shortCut" : "Ctrl+N" } )
 	menuDefinition.append( prefix + "/Open...", { "command" : open, "shortCut" : "Ctrl+O" } )
+	menuDefinition.append( prefix + "/Open Recent", { "subMenu" : openRecent } )
 	menuDefinition.append( prefix + "/OpenDivider", { "divider" : True } )
 	menuDefinition.append( prefix + "/Save", { "command" : save, "shortCut" : "Ctrl+S" } )
 	menuDefinition.append( prefix + "/Save As...", { "command" : saveAs, "shortCut" : "Shift+Ctrl+S" } )
@@ -85,6 +88,10 @@ def open( menu ) :
 	if not path :
 		return
 
+	__open( currentScript, str( path ) )
+	
+def __open( currentScript, fileName ) :
+
 	application = currentScript.ancestor( Gaffer.ApplicationRoot.staticTypeId() )
 	
 	currentNodes = [ n for n in currentScript.children() if n.isInstanceOf( Gaffer.Node.staticTypeId() ) ]
@@ -93,11 +100,62 @@ def open( menu ) :
 	else :	
 		script = Gaffer.ScriptNode()
 
-	script["fileName"].setValue( str( path ) )
+	script["fileName"].setValue( fileName )
 	script.load()
 
 	application["scripts"].addChild( script )
+	
+	addRecentFile( application, fileName )
 
+## A function suitable as the submenu callable for a File/OpenRecent menu item. It must be invoked
+# from a menu which has a ScriptWindow in its ancestry.
+def openRecent( menu ) :
+
+	scriptWindow = menu.ancestor( GafferUI.ScriptWindow )
+	currentScript = scriptWindow.scriptNode()
+	applicationRoot = currentScript.ancestor( Gaffer.ApplicationRoot.staticTypeId() )
+	
+	recentFiles = []
+	with IECore.IgnoredExceptions( AttributeError ) :
+		recentFiles = applicationRoot.__recentFiles
+		
+	result = IECore.MenuDefinition()
+	if recentFiles :
+		for fileName in recentFiles :
+			result.append( "/" + os.path.basename( fileName ), { "command" : IECore.curry( __open, currentScript, fileName ), "description" : fileName } )
+	else :
+		result.append( "/None Available", { "active" : False } )
+	
+	return result
+
+## This function adds a file to the list shown in the File/OpenRecent menu, and saves a recentFiles.py
+# in the application's user startup folder so the settings will persist.
+def addRecentFile( application, fileName ) :
+
+	if isinstance( application, Gaffer.Application ) :
+		applicationRoot = application.root()
+	else :
+		applicationRoot = application
+	
+	try :
+		applicationRoot.__recentFiles
+	except AttributeError :
+		applicationRoot.__recentFiles = []
+	
+	if fileName in applicationRoot.__recentFiles :
+		applicationRoot.__recentFiles.remove( fileName )
+		
+	applicationRoot.__recentFiles.insert( 0, fileName )
+	del applicationRoot.__recentFiles[6:]
+	
+	f = file( os.path.join( applicationRoot.preferencesLocation(), "recentFiles.py" ), "w" )
+	f.write( "# This file was automatically generated by Gaffer.\n" )
+	f.write( "# Do not edit this file - it will be overwritten.\n\n" )
+	
+	f.write( "import GafferUI\n" )
+	for fileName in reversed( applicationRoot.__recentFiles ) :
+		f.write( "GafferUI.FileMenu.addRecentFile( application, \"%s\" )\n" % fileName )
+	
 ## A function suitable as the command for a File/Save menu item. It must be invoked from a menu which
 # has a ScriptWindow in its ancestry.
 def save( menu ) :
